# saas-infra-agent

./: .env.example  .gitignore  architecture.md  build_agent_standalone.py  docker-compose.yaml  monitor-agent-notes.md  pdr.md  pyproject.toml  readme.md  saas_infra_agent_design.md  sample_arch.md
.memory/: current_session  memory.db-shm  memory.db-wal
evals/: README.md  cases.py  checks.py  harness.py  judge.py  run_build_evals.py
evals/fixtures/: arch_docker.md  arch_ecs_rds.md
infra/: apigw.tf  cloudfront.tf  cognito.tf  iam.tf  lambda.tf  rds.tf  s3.tf  secrets.tf  variables.tf  versions.tf
monitoring/: README.md  docker-compose.yml  prometheus.yml  sample_exporter.py
saas_infra_agent/: architecture.md  config.yaml  main.py
saas_infra_agent/agent/: agents.py  build_agent.py  design_agent.py  design_flow.py  domaingate.py  factory.py  orchestrator.py  publish_agent.py  safetygate.py  skills_catalog.py  skills_loader.py
saas_infra_agent/agent/middleware/: __init__.py  limits.py
saas_infra_agent/agent/tools/: list_project_files.py  long_term_memory.py  monitoring.py  read_project_file.py  request_plan_approval.py  search_web.py  (+6 more)
saas_infra_agent/config/: config.py
saas_infra_agent/evals/: README.md  run_deepeval.py  run_metrics.py
saas_infra_agent/llm/: factory.py
saas_infra_agent/mcp/: __init__.py  client.py  servers.py
saas_infra_agent/memory/: __init__.py  auto_save.py  long_term.py  session.py  short_term.py  task_store.py
saas_infra_agent/monitoring/: __init__.py  prometheus.py  simulation.py
saas_infra_agent/observability/: logger.py
(+24 files in other folders)
