[tool.poetry]
name = "saas-cli"
version = "0.1.0"
description = "A saas infrastructure CLI agent"
authors = ["Vasavi"]
packages = [{ include = "saas_infra_agent" }]

[tool.poetry.dependencies]
python = "^3.11"
langgraph-checkpoint-sqlite = "^3.1.0"
python-dotenv = "^1.2.2"
openai = "^2.44.0"
rich = "^15.0.0"
langchain = "^1.3.11"
langchain-openai = "^1.3.3"
tree-sitter = "^0.26.0"
tree-sitter-languages = "^1.10.2"
langchain-qdrant = "^1.1.0"
fastembed = "^0.8.0"
tavily-python = "^0.7.26"
deepagents = "^0.6.11"

[tool.poetry.scripts]
saas-cli = "saas_infra_agent.main:main"
saas-evals = "saas_infra_agent.evals.run_deepeval:main"

[tool.poetry.group.evals.dependencies]
deepeval = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
